[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "PoC basend on Hypermodern Python article."
authors = ["Diego Rani Mazine <diego.mazine@mercadolivre.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dmazine/hypermodern-python"
repository = "https://github.com/dmazine/hypermodern-python"
keywords = ["hypermodern"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
